# SQLAnca

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_and_test.yaml
src/sqlanca/: __init__.py  __internals__.py  _internals.py  columns.py  constraints.py  io.py  tables.py
src/sqlanca/_internals/: classtools.py
tests/sqlanca/: test_columns.py  test_io.py  test_orm.py  test_tables.py
