[project]
name = "sqlanca"
version = "0.1.0"
description = "A python framework for strictly typed data tables based off SQLite."
readme = "README.md"
authors = [
    { name = "Pependr", email = "antonkudrikov88@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
